--- a/src/index.html
+++ b/src/index.html
@@ -8,29 +8,39 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Project: Library</h1>
-    <div>
-        <form action="" style="padding: 10px;">
-            <div style="padding: 10px;">
-                <label>Title</label>
-                <input type="text" name=book-name id="bookName" placeholder="Insert book name">
+    <div class="flex flex-row h-screen">
+        <div class="p-4 flex flex-col gap-4 justify-center">
+            <div class="flex flex-col">
+                <h1 class="font-bold">Project: Library</h1>
             </div>
-            <div style="padding: 10px;">
-                <label>Author</label>
-                <input type="text" name="author" id="authorName" placeholder="Insert author name">
+            <div class="flex flex-col">
+                <form action="" class="flex flex-col gap-2">
+                    <div class="py-2">
+                        <label class="pr-2" for="bookName">Title</label>
+                        <input type="text" name=book-name id="bookName" placeholder="Insert book name">
+                    </div>
+                    <div class="py-2">
+                        <label class="pr-2" for="authorName">Author</label>
+                        <input type="text" name="author" id="authorName" placeholder="Insert author name">
+                    </div>
+                    <div class="py-2">
+                        <label class="pr-2" for="numberPages">Pages</label>
+                        <input type="number" name="pages" id="numberPages" placeholder="Insert number of pages">
+                    </div>
+                    <div class="py-2">
+                        <label class="pr-2" for="readStatus">Have you read this book?</label>
+                        <input type="checkbox" name="readStatus" id="readStatus">
+                    </div>
+                    <div class="py-2">
+                        <button id="btn" class="bg-slate-300 p-4 hover:bg-slate-600 hover:text-white">Add Book</button>
+                    </div>
+                </form>    
             </div>
-            <div style="padding: 10px;">
-                <label>Pages</label>
-                <input type="number" name="pages" id="numberPages" placeholder="Insert number of pages">
+        </div>
+        <div class="p-4 flex flex-row flex-wrap gap-4">
+            <div class="flex flex-flex-row w-80 h-56 bg-slate-500">
             </div>
-            <div style="padding: 10px;">
-                <label>Have you read this book?</label>
-                <input type="checkbox" name="read-status" id="readStatus">
-            </div>
-            <div style="padding: 10px;">
-                <button id="btn" style="padding: 10px;">Add Book</button>
-            </div>
-        </form>
+        </div>
     </div>
 </body>
 </html>
