--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="flex flex-row h-screen">
-        <div class="p-4 flex flex-col gap-4 justify-center">
+        <div class="p-4 flex flex-col gap-4 justify-center bg-blue-300">
             <div class="flex flex-col">
-                <h1 class="font-bold">Project: Library</h1>
+                <h1 class="font-bold text-xl">Project: Library</h1>
             </div>
             <div class="flex flex-col">
                 <form action="" class="flex flex-col gap-2">
