--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,7 @@
                 </form>    
             </div>
         </div>
-        <div class="p-4 flex flex-row flex-wrap gap-4">
-            <div class="flex flex-flex-row w-80 h-56 bg-slate-500">
-            </div>
+        <div class="p-4 flex flex-row flex-wrap gap-4" id="booksList">
         </div>
     </div>
 </body>
