--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,19 @@
                 <form action="" class="flex flex-col gap-2">
                     <div class="py-2">
                         <label class="pr-2" for="bookName">Title</label>
-                        <input type="text" name=book-name id="bookName" placeholder="Insert book name">
+                        <input class="text-center" type="text" name=book-name id="bookName" placeholder="Insert book name" required />
                     </div>
                     <div class="py-2">
                         <label class="pr-2" for="authorName">Author</label>
-                        <input type="text" name="author" id="authorName" placeholder="Insert author name">
+                        <input class="text-center" type="text" name="author" id="authorName" placeholder="Insert author name" required />
                     </div>
                     <div class="py-2">
                         <label class="pr-2" for="numberPages">Pages</label>
-                        <input type="number" name="pages" id="numberPages" placeholder="Insert number of pages">
+                        <input class="text-center" type="number" name="pages" id="numberPages" placeholder="Insert number of pages" required />
                     </div>
                     <div class="py-2">
                         <label class="pr-2" for="readStatus">Have you read this book?</label>
-                        <input type="checkbox" name="readStatus" id="readStatus">
+                        <input class="text-center" type="checkbox" name="readStatus" id="readStatus" required />
                     </div>
                     <div class="py-2">
                         <button id="btn" class="bg-slate-300 p-4 hover:bg-slate-600 hover:text-white">Add Book</button>
